integ-tests/tests/snapshots/parser__bad_strings__unterminated_literal.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unterminated-string]: 
  ┌─ unterminated_literal:1:7
  │
1 │ foo = '
  │       ^ eof reached before string terminator


